fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -3,24 +3,38 @@ body {
 }
 .container {
   margin: 120px auto;
-  max-width: 600px;
+  max-width: 720px;
+  border-radius: 10px;
 }
 header {
   margin-bottom: 30px;
+  padding-top: 20px;
 }
 
 h1 {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 700;
+  font-size: 50px;
   text-align: center;
-  font-size: 40px;
+  margin-top: 5px;
+  margin-bottom: 25px;
   line-height: 1.5;
-  font-weight: 800;
+  border-bottom: 1px solid rgba(221, 133, 221, 0.5);
 }
 .form-container {
   padding: 30px;
   background-color: white;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  box-shadow: 0px 20px 60px rgba(7, 7, 8, 0.189);
   border-radius: 10px;
-  margin-bottom: 30px;
+  margin: 30px;
+}
+.glow-container {
+  width: 678px;
+  height: 155px;
+  position: absolute;
+  margin-top: -8px;
+  margin-left: 20px;
+  opacity: 0;
 }
 
 form {
